# A-B-Testing

./: README.md  a-b testing.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
abtest/: __init__.py  cli.py  cuped.py  metrics.py  power.py  sanity.py  stats.py  utils.py
docs/: assumptions.md  experiment_design.md
scripts/: generate_data.py  run_analysis.py
src/: __init__.py  a-b-testing.py  continuous.py  metrics.py  simulate.py  two-sided.py
tests/: test_cuped.py  test_sanity.py  test_stats.py
